--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@
     <a href="habits.html">Read More &rarr;</a>
     <div class="blog_post">
       <h2>Integrating Digital and Physical Interfaces</h2>
-      <p>With the advancement of technology, many consumer products are beginning to harness the power of using both digital and physical interfaces. The integration of interactions design and industrial design can result in richer, deeper experiences. Unfortunately, when executed incorrectly, this integration can lead to confusion or even failure of product usability. It’s a major design challenge to determine how to define the boundary between physical and digital interfaces and which medium each task/scenario should employ. In many products, this combination is used ineffectively, or may not be necessary at all. In fact, it’s not uncommon to see designs using known physical or digital interface design guidelines improperly.
+      <p>With the advancement of technology, many consumer products are beginning to harness the power of using both digital and physical interfaces. The integration of interactions design and industrial design can result in richer, deeper experiences. Unfortunately, when executed incorrectly, this integration can lead to confusion or even failure of product usability. It’s a major design challenge to determine how to define the boundary between physical and digital
       </p>
     </div>
-
-  <a href="integrated.html">Read More &rarr;</a>
-  <div class="blog_post">
-    <h2>International Design</h2>
-    <p>The rapid spread of online commerce has created an opportunity to open up digital markets and products to the international community. This also creates increased competition for your products, and a resulting need to make sure your brand can reach citizens in all languages and cultures. </p>
-  </div>
-  <a href="international.html">Read More &rarr;</a>
+    <a href="integrated.html">Read More &rarr;</a>
+    <div class="blog_post">
+      <h2>International Design</h2>
+      <p>The rapid spread of online commerce has created an opportunity to open up digital markets and products to the international community. This also creates increased competition for your products, and a resulting need to make sure your brand can reach citizens in all languages and cultures. </p>
+    </div>
+    <a href="international.html">Read More &rarr;</a>
+    <div class="blog_post">
+      <h2>Design for Trust</h2>
+      <p>There is no universally accepted definition of trust. The lack of agreement on this topic could be attributed to the different fields researching the topic. A disciplinary lens often skews perspective and causes psychologists to see trust as a personal trait, sociologists to see trust as a social structure, and economists to see trust as an economic choice mechanism. </p>
+    </div>
+    <a href="trust.html">Read More &rarr;</a>
   </div>
 </body>
 
