--- a/integrated.html
+++ b/integrated.html
@@ -110,6 +110,7 @@
       <li><a href="habits.html">Design for Habits</a></li>
       <li><a href="integrated.html">Integrated Interfaces</a></li>
       <li><a href="international.html">International Design</a></li>
+      <li><a href="trust.html">Design for Trust</a></li>
     </ul>
   </div>
 </body>
