--- a/international.html
+++ b/international.html
@@ -36,7 +36,7 @@
     </div>
     <div class="constraints">
       <h6>Narrow Field of View</h6>
-      <p>Living in a specific region, it’s easy to assume that your cultures design standards are global design standards, particularly in the English speaking world. As a result the majority of the internet's pages and market places are primarily in English. Some factors such as programming languages or the shortage of typographers in foreign languages could contribute to this problem. But often, this result sin designs that focus on the English speaking world, with the western world receiving a lot of attention. In order to design an accessible product, it’s important to recognize the influence of culture and language in design.</p>
+      <p>Living in a specific region, it’s easy to assume that your cultures design standards are global design standards, particularly in the English speaking world. As a result the majority of the internet's pages and market places are primarily in English. Some factors such as programming languages or the shortage of typographers in foreign languages could contribute to this problem. But often, this results in designs that focus on the English speaking world, with the western world receiving a lot of attention. In order to design an accessible product, it’s important to recognize the influence of culture and language in design.</p>
     </div>
     <div class="constraints">
       <h6>Hofstede’s Cultural Dimension Theory </h6>
@@ -49,19 +49,16 @@
         <li><b>Long vs. Short-Term Orientation</b>: the time horizon of the society. Long term are future oriented, pragmatic rewarding persistence and saving and short term cultures focus on the present rewarding social relations .</li>
       </ul>
       <p> Canada's scoring on Hoefstede's 5 dimensions can be seen below</p>
-      <img src="images/canada.png" class="full_image border"/>
+      <img src="images/canada.png" class="full_image border" />
       <h5 class="caption">Sourced from: <a href="a">https://geert-hofstede.com/canada.html</a></h5>
-      <p>While these dimensions were created in an attempt to decipher cultural values from a sociological perspective, the insights his systematic framework provide into cultural norms are extremely valuable and applicable to design.</p>
+      <p>While these dimensions were created in an attempt to decipher cultural values from a sociological perspective, the insights this systematic framework provide into cultural norms are extremely valuable and applicable to design.</p>
       <div class="problem">
-        <p>A sixth dimension was added some years later known as indulgence -  the extent to which people try and control their desires and impulses. The two of extremes on this spectrum are indulgent and restrained.</p>
+        <p>A sixth dimension was added some years later known as indulgence - the extent to which people try and control their desires and impulses. The two of extremes on this spectrum are indulgent and restrained.</p>
       </div>
     </div>
     <div class="constraints">
       <h6>Localization</h6>
       <p>Localization refers to the adaptation of a product, application or document content to meet the language, cultural and other requirements of a specific target market (a locale). This places an emphasis on considering user context in the design process, specifically looking into their cultural demographic. The level of localization can be considered a spectrum, where on one end there is the bare minimum of translations, and on the other a completely different site. There are advantages and disadvantages to both.</p>
-      <div class="problem">
-        <p>Side note: globalization is not the same as localization! While often confused, globalization refers to the design of a _____ . Localization refers to customizing the content and layout of a site to cater to distinct locales.</p>
-      </div>
     </div>
     <div class="constraints">
       <h6>Standardization</h6>
@@ -95,27 +92,27 @@
         <li><b>Symbols</b>: Different symbols can have completely different meanings depending on culture and geographical location. Elements that are only familiar in certain parts of the world can make navigation extremely difficult. In mirrored interfaces particularly, icon directionality is particularly important. Toggles, slides and back buttons are all reversed.</li>
         <li><b>Imagery</b>: Ethnicity, content, locale, activity, all considerations when selecting photographs, the amount of emotion and what an image can invoke are different. Even the use case for photography is different for various cultures.</li>
         <li><b>Colours:</b> colour semiotics varies across cultures and can impact user expectations. In some cultures, colours are related to life, activity, fun and lack thereof is more stark, negative. In this case it is not uncommon to see bright and colorful sites with little to no white space.</li>
-        <li><b>Mental Models</b>: users look at data and make decisions differently. The way we interact with products is strongly defined by out culture, which affects the way we think. Consider how users in different cultures might consume information and make decisions.</li>
+        <li><b>Mental Models</b>: users look at data and make decisions differently. The way we interact with products is strongly defined by our culture, which affects the way we think. Consider how users in different cultures might consume information and make decisions.</li>
       </ul>
     </div>
     <div class="constraints">
-    <h6>Ethics</h6>
-    <p>Designing for a unfamiliar culture is a sensitive undertaking. It is extremely important to understand different cultural perspectives, while not stereotyping an entire population. Take care to not make assumptions, do the research and listen to locals, embrace the cultural characteristics and use them to your advantage. Don't forget the fundamental design principles that should help validate decisions. In the case of designing for foreign cultures, its even more important to go where your users are. Listen to their feedback and data, and be flexible. Even though we are familiar with design patterns, it may surprise you when a different cultural group reacts differently
-</p>
+      <h6>Ethics</h6>
+      <p>Designing for a unfamiliar culture is a sensitive undertaking. It is extremely important to understand different cultural perspectives, while not stereotyping an entire population. Take care to not make assumptions, do the research and listen to locals, embrace the cultural characteristics and use them to your advantage. Don't forget the fundamental design principles that should help validate decisions. In the case of designing for foreign cultures, its even more important to go where your users are. Listen to their feedback and data, and be flexible. Even though we are familiar with design patterns, it may surprise you when a different cultural group reacts differently
+      </p>
     </div>
     <div class="constraints">
-      <h6>Review: McDonald's</h6>
+      <h6>Case Study: McDonald's</h6>
       <p>McDonald's has drastically different websites for different locales around the world. They are often both praised and criticized for their highly personalized experiences based on country. Without access to their research and data, its difficult to say whether or not the benefits of transcreation far outweigh the costs. However, taking a look into the sites for specific countries reveals a great deal about the design considerations McDonald's took when creating their websites. Here we will look at <a href="http://www.mcdonalds.ca/ca/en.html">McDonald's Canada</a> and <a href="http://www.mcdonalds.com.cn/">McDonald's China</a> . Specifically I will be looking at the design of their landing page, and the process of locating a restaurant near me.</p>
       <ul>
         <li><b>Canada</b>: For details on Canada's scoring on Hofstede's 5 dimensions look <a href="https://geert-hofstede.com/canada.html">here</a>. Typical to egalitarian countries, this site provides informal structures with clear and shallow navigation. The clear nod to Canadian farming in one of the images in the carousel as well as its own place in the primary navigation shows a very personal regard for Canadian values. The very consumer based ad methods resonate well with the individualist culture that Canadians portray with "you" used in their language. The large full page photography based carousel is a common landing page for Western sites, where wordy descriptions are not as popular as imagery. The landing page itself can fit almost perfectly within the window without scrolling, showing the lack of browsing interest for this site in Canada. Finally, all the very consumer driven content shows a more consumer-based society.</li>
-        <img src="images/can_mc.png" class="full_image"/>
+        <img src="images/can_mc.png" class="full_image" />
         <p style="margin-top: 15px;">To navigate to the Restaurant Locator page, a link is immediately available on the landing page, though it is very small. This may show that users want this functionality, but it is not a prevalent use case. On the Restaurant Locator page itself, there exists a text field to enter a postal code, city or province. This shows particular detail has been given to designing a distinctly Canadian input field. The imagery seems a little dated, but very clearly reinforces the message of location finding. Once more, the use of imagery as a means of supplementing reading comes across strongly in this design. Notice also the extremely consistent navigation anchoring the site, offering the same clear navigation.</p>
-        <img src="images/can_mc_loc.png" class="full_image"/>
+        <img src="images/can_mc_loc.png" class="full_image" />
         <p style="margin-top: 15px;">Throughout the site, there was a strong push to download the mobile application. This could indicate a various interests: perhaps the focus of the design team in Canada is on optimizing the experience in the app, or that a key metric the Canadian McDonald's is trying to improve is the number of mobile downloads. </p>
-        <li><b>China</b>: For details on China's scoring on Hofstede's 5 dimensions look <a href="https://geert-hofstede.com/china.html">here</a>. It's quite apparent from a first glance that the design and layout of this site is completely different than the Canadian version. Firstly the site is built in an extremely modular manner that can be easily scaled for mobile. This likely indicates a high rate of users on mobile or using varied screen sizes. This could also indicate the absence of a dedicated mobile application since the site itself is very mobile-friendly. Secondly, the extremely simple, visual navigation indicates a positive response for the inclusion symbols and icons to assist in navigation. There is also many more options in terms of navigation with the top and side navigation as well as with all the articles  The extremely crowded information dense with bright eye catching colors and heavy in copy is extremely common in East Asian websites. The content continuously loads as you scroll making the site look more like a newspaper or blog indicating a more immersive online experience. The moving animation at the top of the page is also extremely eye catching demonstrating a very different brand strategy than North America.</li>
-        <img src="images/chn_mc.png" class="full_image"/>
+        <li><b>China</b>: For details on China's scoring on Hofstede's 5 dimensions look <a href="https://geert-hofstede.com/china.html">here</a>. It's quite apparent from a first glance that the design and layout of this site is completely different than the Canadian version. Firstly the site is built in an extremely modular manner that can be easily scaled for mobile. This likely indicates a high rate of users on mobile or using varied screen sizes. This could also indicate the absence of a dedicated mobile application since the site itself is very mobile-friendly. Secondly, the extremely simple, visual navigation indicates a positive response for the inclusion symbols and icons to assist in navigation. There is also many more options in terms of navigation with the top and side navigation as well as with all the articles The extremely crowded information dense with bright eye catching colors and heavy in copy is extremely common in East Asian websites. The content continuously loads as you scroll making the site look more like a newspaper or blog indicating a more immersive online experience. The moving animation at the top of the page is also extremely eye catching demonstrating a very different brand strategy than North America.</li>
+        <img src="images/chn_mc.png" class="full_image" />
         <p style="margin-top: 15px;">The navigation to the Restaurant Location page is in the secondary side navigation. It appears to be a more important feature based on its size and location on the page. Once more it also has an icon as well as words to describe its feature. This may be due to the difficulty of reading Chinese characters due to the lack of available typefaces and the condensed nature of the characters. Interestingly, the location page is unable to load until it finds your location displaying a personalized level of automation. Once the page loads, it automatically knows your location and provides you the location. Its interesting that the map is already populated and there are no other images on this site. If you look to the left of the page, you can also see options to filter the search. It is clear from the additional features of the page that this user flow is quite popular. It's also interesting to note that the palette in China seems to veer away from red and yellow, but rather yellow and black, as is evident on this page. This could be due to the cultural associations with red in China as a celebratory color.</p>
-        <img src="images/chn_mc_loc.png" class="full_image"/>
+        <img src="images/chn_mc_loc.png" class="full_image" />
         <p style="margin-top: 15px;">Throughout this site, it is very clear that a lot of work and maintenance needs to be put in to upkeep its functionality. The various articles changed even throughout my case study meaning that the content is constantly changing. This could indicate a high engagement on this website vs. its Canadian counterparts. Additionally the services offered also differ where in China, customers can have their food delivered. Perhaps this extra real world service places a heavier burden on their digital space for customers accessing the site for different purposes. In comparison to the Canadian site, it is clear that McDonald's China places a heavier emphasis on engaging user experiences on the web.</p>
       </ul>
     </div>
@@ -125,6 +122,7 @@
       <li><a href="habits.html">Design for Habits</a></li>
       <li><a href="integrated.html">Integrated Interfaces</a></li>
       <li><a href="international.html">International Design</a></li>
+      <li><a href="trust.html">Design for Trust</a></li>
     </ul>
   </div>
 </body>
