--- a/trust.html
+++ b/trust.html
@@ -53,60 +53,70 @@
       </div>
     </div>
     <div class="constraints">
-    <h6>Design Takeaways</h6>
-    <p>In product design, there exists a constant battle between the reward for completing an action, and the work required to receive it. Think of trust as another tool designed can use to overcome this hurdle. Below are the considerations that should be taken into account to help you design for trust.</p>
-    <ul>
-    <li><b>Reputation</b>: Airbnb and stanford research, reputation can help people overcome barriers to trust in situations where a product is unfamiliar.</li>
-    <li><b>Social Proof</b>: This can come in the form of testimonials, friend recommendations or word-of-mouth. Incorporating the human aspect into your design, and building this community can really establish trust in your design.</li>
-    <li><b>Certification</b>: This is a little harder to accomplish in the digital age, but having certifications of excellence or verifications of authenticities can help build trust in your designs. Verified payment services are a prime example of this.</li>
-    <img src="images/certification.jpg" class="full_image border">
-    <h5 class="caption">Online Certifications to prove authenticity</h5>
-    <li><b>Brand</b>: a marketing tool that has been used since the analogue age, the brand of the product strongly influences not only the reputation, but the emotional response and decisions making process of a user. Imagery, color and copy can influence the feeling of trust that your brand invokes.</li>
-    <li><b>User Centered Design</b>: Making it seem as if the product aims to protect the user is a key feature that can help establish trust. The sense of focusing on the user goals and needs, and prioritizing this over company goals often helps establish a positive trust relationship.</li>
-    <li><b>Layout</b>: No overwhelming or hidden information that looks as if it is trying to hide. Make it clear what you are trying to offer, making it easy for users to learn more and discover if they so choose. Hiding key information as smaller, hidden below the fold, under carousels or in hidden elements can reduce trust.</li>
-    <li><b>Sensitive Information Treatment</b>: Complete transparency is important, acknowledgement of the sensitivity of the information and shown steps on how this is being treated</li>
-    <img src="images/sensitive.png" class="full_image">
-    <h5 class="caption">Stripe Protection of User Data </h5>
-    <li><b>Context</b>: This is extremely important when building trust in a product. Confusing experiences and relevance of provided information can severely decrease a user's trust. Trust is often decided based on previous experiences of the user, so an understanding of their context can help designers create products that users can relate to.</li>
-    <li><b>Expectations</b>: when users expectations are not met, leads to automatic distrust in a product or service. Even when it is the user experience itself, be it the user funnel/journey, an unexpected event can lead to an unpleasant experience. </li>
-    </ul>
+      <h6>Design Takeaways</h6>
+      <p>In product design, there exists a constant battle between the reward for completing an action, and the work required to receive it. Think of trust as another tool designed can use to overcome this hurdle. Below are the considerations that should be taken into account to help you design for trust.</p>
+      <ul>
+        <li><b>Social Proof</b>: This can come in the form of testimonials, friend recommendations or word-of-mouth. Incorporating the human aspect into your design, and building this community can really establish trust in your design. Airbnb and Stanford puclished research proving that reputation can help people overcome barriers to trust in situations where a user might not otherwise proceed.</li>
+        <li><b>Certification</b>: This is a little harder to accomplish in the digital age, but having certifications of excellence or verifications of authenticities can help build trust in your designs. Verified payment services are a prime example of this.</li>
+        <img src="images/certification.jpg" class="full_image border">
+        <h5 class="caption">Online Certifications to prove authenticity</h5>
+        <li><b>Brand</b>: a marketing tool that has been used since the analogue age, the brand of the product strongly influences not only the reputation, but the emotional response and decisions making process of a user. Imagery, color and copy can influence the feeling of trust that your brand invokes.</li>
+        <li><b>User Centered Design</b>: Making it seem as if the product aims to protect the user is a key feature that can help establish trust. The sense of focusing on the user goals and needs, and prioritizing this over company goals often helps establish a positive trust relationship.</li>
+        <li><b>Layout</b>: No overwhelming or hidden information that looks as if it is trying to hide. Make it clear what you are trying to offer, making it easy for users to learn more and discover if they so choose. Hiding key information as smaller, hidden below the fold, under carousels or in hidden elements can reduce trust.</li>
+        <li><b>Sensitive Information Treatment</b>: Complete transparency is important, acknowledgement of the sensitivity of the information and shown steps on how this is being treated</li>
+        <img src="images/sensitive.png" class="full_image">
+        <h5 class="caption">Stripe Protection of User Data </h5>
+        <li><b>Context</b>: This is extremely important when building trust in a product. Confusing experiences and relevance of provided information can severely decrease a user's trust. Trust is often decided based on previous experiences of the user, so an understanding of their context can help designers create products that users can relate to.</li>
+        <li><b>Expectations</b>: when users expectations are not met, leads to automatic distrust in a product or service. Even when it is the user experience itself, be it the user funnel/journey, an unexpected event can lead to an unpleasant experience. </li>
+      </ul>
     </div>
     <div class="constraints">
-      <h6>Ethics: Catfishing</h6>
-      <p></p>
+      <h6>Ethics</h6>
+      <p>Viruses, scams or even catfishing are all cases of online fraud that are unanimously malicious.  The existence of these threats has created a need for businesses to develop an artificial trust between user and product. As a designer, it is important to recognize the influence designing for trust can have on users. Think critically about the implications of creating a product that builds trust, and how that trust is being manipulated. A prime example of this manipulation is in user data acquisition. A major point of contention between individuals and businesses has been the analysis and sale of personal data. When users provide their data to a business upon signup, there is typically an implict sense of trust in the product. Take care to ensure that users' are aware and informed, and do not use their trust to manipulate their decisions in an unethical manner. This can be applied to a variety of products and services - particularly to online pyramid schemes and subscriptions.
+      </p>
     </div>
     <div class="constraints">
-      <h6>Case Study: Airbnb</h6>
-      <p><a href="https://www.airbnb.ca/?locale=en">Airbnb</a> is a thought leader is designing for trust, this is one of the biggest challenges they face in the design of their product. Their product must inherently build trust not only between the service and the user, but the user and their host. Let’s take a look into what they do extremely well.</p>
+      <h6>Case Study: Airbnb & Getaround</h6>
+      <p><a href="https://www.airbnb.ca/?locale=en">Airbnb</a> is an industry leader in designing for trust. In fact, this is one of the biggest challenges they face in the design of their product. They must inherently build trust not only between the service and the user, but also between the users' as well. With this in mind, Airbnb has created a product that fosters both trust and community. Looking at their web application, it is easy to see how they are applying good design for trust methodologies to engage their users.</p>
       <ul>
         <li><b>Social Proof</b>: Reviews</li>
         <li><b>Context</b>: Introduction to host</li>
         <div class="center">
-        <img style="max-width: 500px;" src="images/context.png" class="full_image">
-        <h5 class="caption">Airbnb First Host Contact</h5>
+          <img style="max-width: 500px;" src="images/context.png" class="full_image">
+          <h5 class="caption">Airbnb First Host Contact</h5>
         </div>
         <li><b>Certification</b>: Verification host</li>
         <div class="center">
-        <img style="max-width: 250px;" src="images/certification_verified.png" class="full_image">
-        <h5 class="caption">Airbnb user Verification</h5>
+          <img style="max-width: 250px;" src="images/certification_verified.png" class="full_image">
+          <h5 class="caption">Airbnb user Verification</h5>
         </div>
         <li><b>Reputation</b>: big company</li>
         <li><b>Sensitive Information</b>: Address</li>
         <div class="center">
-        <img style="max-width: 500px;" src="images/sensitive_map.png" class="full_image">
-        <h5 class="caption">Airbnb Host Location Map</h5>
+          <img style="max-width: 500px;" src="images/sensitive_map.png" class="full_image">
+          <h5 class="caption">Airbnb Host Location Map</h5>
         </div>
-        <li><b>Expectations</b>: Book Now, Insta book</li>
+        <li><b>Expectations</b>: Book Now, where all the fees go</li>
         <div class="center">
-        <img style="max-width: 500px;" src="images/expectation.png" class="full_image">
-        <h5 class="caption">Airbnb Booking Design</h5>
+          <img style="max-width: 500px;" src="images/expectation.png" class="full_image">
+          <h5 class="caption">Airbnb Booking Design</h5>
         </div>
       </ul>
-      <p>For proof of their excellence, look at all the other businesses that mimic the Airbnb model:</p>
+      <p>For proof of their excellence, look at all the another businesses that mimic the Airbnb model: <a href="https://www.getaround.com/">Getaround</a>. Their service is very comparable to Airbnb where trust is a necessity in their product.</p>
+      <img src="images/getaround.png" class="full_image">
       <ul>
-        <li><b>Getaround</b></li>
-        <li><b>Task Rabbit</b></li>
-        <li><b>Couch surfing</b></li>
+        <li><b>Certification</b></li>
+        <div class="center">
+          <img style="max-width: 500px;" src="images/ga_verification.png" class="full_image">
+          <h5 class="caption">Getaround verification process</h5>
+        </div>
+        <li><b>Expectations</b>: secret or hidden fees such as a smoking, dirty, wasn't sure how to adress this, common complaint</li>
+        <li><b>Layout</b>: information is extremely unclear.</li>
+        <div class="center">
+          <img style="max-width: 250px;" src="images/ga_book.png" class="full_image">
+          <h5 class="caption">Getaround booking process</h5>
+        </div>
+        <li><b>Brand</b>: One of the perils of a younger company is a lack of effort and resrouces invested in developing a brand. For many companies, this (rightfully so) takes a back seat to the development of a functional product. However, when engagement with your product depends on your brand, its often important to consider both during development. </li>
       </ul>
     </div>
   </div>
