--- a/trust.html
+++ b/trust.html
@@ -34,7 +34,7 @@
       <h6>What is Trust?</h6>
       <p>There is no universally accepted definition of trust. The lack of agreement on this topic could be attributed to the different fields researching the topic. A disciplinary lens often skews perspective and causes psychologists to see trust as a personal trait, sociologists to see trust as a social structure, and economists to see trust as an economic choice mechanism. In the eyes of the designer, trust isn’t clearly defined, but is a tool often used in digital products. When looking at interfaces it’s clear that trust isn’t binary, but rather a spectrum of different flavors. Different products require and aim to have different forms or strength of trusts between their products. Trust in an email subscription, trust in a news source, trust in a payment service or even trusting that a device shows the correct time are all experiences that design for trust, and yet create complete different relationships between users and products. One common theme, is that you put trust in a product when it can put you in a position of vulnerability. The consequences of this vulnerability are what create the spectrum and genre of trust.</p>
       <img src="images/trust-model.png" class="full_image border">
-      <h5 class="caption">Interdisciplinar model of Trust Types (Alharbi et al.)</h5>
+      <h5 class="caption">Interdisciplinary model of Trust Types (Alharbi et al.)</h5>
     </div>
     <div class="constraints">
       <h6>Why do you need trust?</h6>
@@ -56,14 +56,14 @@
       <h6>Design Takeaways</h6>
       <p>In product design, there exists a constant battle between the reward for completing an action, and the work required to receive it. Think of trust as another tool designed can use to overcome this hurdle. Below are the considerations that should be taken into account to help you design for trust.</p>
       <ul>
-        <li><b>Social Proof</b>: This can come in the form of testimonials, friend recommendations or word-of-mouth. Incorporating the human aspect into your design, and building this community can really establish trust in your design. Airbnb and Stanford puclished research proving that reputation can help people overcome barriers to trust in situations where a user might not otherwise proceed.</li>
+        <li><b>Social Proof</b>: This can come in the form of testimonials, friend recommendations or word-of-mouth. Incorporating the human aspect into your design, and building this community can really establish trust in your design. Airbnb and Stanford published research proving that reputation can help people overcome barriers to trust in situations where a user might not otherwise proceed.</li>
         <li><b>Certification</b>: This is a little harder to accomplish in the digital age, but having certifications of excellence or verifications of authenticities can help build trust in your designs. Verified payment services are a prime example of this.</li>
         <img src="images/certification.jpg" class="full_image border">
         <h5 class="caption">Online Certifications to prove authenticity</h5>
         <li><b>Brand</b>: a marketing tool that has been used since the analogue age, the brand of the product strongly influences not only the reputation, but the emotional response and decisions making process of a user. Imagery, color and copy can influence the feeling of trust that your brand invokes.</li>
         <li><b>User Centered Design</b>: Making it seem as if the product aims to protect the user is a key feature that can help establish trust. The sense of focusing on the user goals and needs, and prioritizing this over company goals often helps establish a positive trust relationship.</li>
         <li><b>Layout</b>: No overwhelming or hidden information that looks as if it is trying to hide. Make it clear what you are trying to offer, making it easy for users to learn more and discover if they so choose. Hiding key information as smaller, hidden below the fold, under carousels or in hidden elements can reduce trust.</li>
-        <li><b>Sensitive Information Treatment</b>: Complete transparency is important, acknowledgement of the sensitivity of the information and shown steps on how this is being treated</li>
+        <li><b>Sensitive Information Treatment</b>: Complete transparency is important, acknowledgment of the sensitivity of the information and shown steps on how this is being treated</li>
         <img src="images/sensitive.png" class="full_image">
         <h5 class="caption">Stripe Protection of User Data </h5>
         <li><b>Context</b>: This is extremely important when building trust in a product. Confusing experiences and relevance of provided information can severely decrease a user's trust. Trust is often decided based on previous experiences of the user, so an understanding of their context can help designers create products that users can relate to.</li>
@@ -72,51 +72,52 @@
     </div>
     <div class="constraints">
       <h6>Ethics</h6>
-      <p>Viruses, scams or even catfishing are all cases of online fraud that are unanimously malicious.  The existence of these threats has created a need for businesses to develop an artificial trust between user and product. As a designer, it is important to recognize the influence designing for trust can have on users. Think critically about the implications of creating a product that builds trust, and how that trust is being manipulated. A prime example of this manipulation is in user data acquisition. A major point of contention between individuals and businesses has been the analysis and sale of personal data. When users provide their data to a business upon signup, there is typically an implict sense of trust in the product. Take care to ensure that users' are aware and informed, and do not use their trust to manipulate their decisions in an unethical manner. This can be applied to a variety of products and services - particularly to online pyramid schemes and subscriptions.
+      <p>Viruses, scams or even cat-fishing are all cases of online fraud that are unanimously malicious.  The existence of these threats has created a need for businesses to develop an artificial trust between user and product. As a designer, it is important to recognize the influence designing for trust can have on users. Think critically about the implications of creating a product that builds trust, and how that trust is being manipulated. A prime example of this manipulation is in user data acquisition. A major point of contention between individuals and businesses has been the analysis and sale of personal data. When users provide their data to a business upon signup, there is typically an implicit sense of trust in the product. Take care to ensure that users' are aware and informed, and do not use their trust to manipulate their decisions in an unethical manner. This can be applied to a variety of products and services - particularly to online pyramid schemes and subscriptions.
       </p>
     </div>
     <div class="constraints">
       <h6>Case Study: Airbnb & Getaround</h6>
       <p><a href="https://www.airbnb.ca/?locale=en">Airbnb</a> is an industry leader in designing for trust. In fact, this is one of the biggest challenges they face in the design of their product. They must inherently build trust not only between the service and the user, but also between the users' as well. With this in mind, Airbnb has created a product that fosters both trust and community. Looking at their web application, it is easy to see how they are applying good design for trust methodologies to engage their users.</p>
       <ul>
-        <li><b>Social Proof</b>: Reviews</li>
-        <li><b>Context</b>: Introduction to host</li>
+        <li><b>Social Proof</b>: Airbnb's product is centered around providing social proof to build up the reputation of their service and the reputation of their users. By having both hosts and guests review one another after each stay, users are contributing to the growth of Airbnb's and each others' reputation in what feels like a seamless experience. Making reviews come from a real individual who has used the product  gives this digital service a more human feel, and makes the reviews seem more authentic. This also helps develop and grow the community as more and more users continue to share their Airbnb experiences.</li>
+        <li><b>Context</b>: Another experience that makes the service seem more trustworthy is the method in which Airbnb first introduces hosts and guests. While this may seem a simple step in the booking process, it provides a great deal of value towards building trust between users'. This step provides context and some background information that is the first step in establishing a relationship with and open communication channel between guest and host. The personalized message, the size of the input field and the prompting questions all aim to help the guest establish a connection with the host and vice versa.</li>
         <div class="center">
           <img style="max-width: 500px;" src="images/context.png" class="full_image">
           <h5 class="caption">Airbnb First Host Contact</h5>
         </div>
-        <li><b>Certification</b>: Verification host</li>
+        <li><b>Certification</b>: Airbnb requires a standard proof of identity, with options to provide more information to further validate your identity. The use of official documents and personal contact information to provide authentication for a user makes their service feel more trustworthy. The level of verification is displayed </li>
         <div class="center">
           <img style="max-width: 250px;" src="images/certification_verified.png" class="full_image">
-          <h5 class="caption">Airbnb user Verification</h5>
+          <h5 class="caption">Airbnb User Verification - Profile Page</h5>
         </div>
-        <li><b>Reputation</b>: big company</li>
-        <li><b>Sensitive Information</b>: Address</li>
+        <li><b>Sensitive Information</b>: In creating a service that deals with sensitive user information, its important to what information users consider private, and how to share that information with others. While it is obvious that payment information should be kept private, what is less clear is other personal details such as contact information, opinions, etc. Airbnb's design of the host address location indicates that this is sensitive user information. The general location of the house is provided, but the specific address is only shared after a booking has been confirmed. This shows a sensitivity to privacy, as well as knowledge of when privacy can be overcome that instills a sense of trust in the services capability to protect its users and their information.</li>
         <div class="center">
           <img style="max-width: 500px;" src="images/sensitive_map.png" class="full_image">
-          <h5 class="caption">Airbnb Host Location Map</h5>
+          <h5 class="caption">Airbnb Host Address Map</h5>
         </div>
-        <li><b>Expectations</b>: Book Now, where all the fees go</li>
+        <li><b>Expectations</b>: One of the largest points of concern for users interacting with e-commerce services is the payment. Hidden fees or additional taxes, as well as when in the flow you actually confirm payment are often points of confusion. Airbnb does an excellent job by providing all details up front and managing user expectations. With the option to learn more about all the different fees, and the copy below the Book button letting a user know that they won't be charged yet, this experience is designed to inform the user. By providing complete transparency to the user, the service feels more honest and trustworthy.</li>
         <div class="center">
           <img style="max-width: 500px;" src="images/expectation.png" class="full_image">
           <h5 class="caption">Airbnb Booking Design</h5>
         </div>
       </ul>
-      <p>For proof of their excellence, look at all the another businesses that mimic the Airbnb model: <a href="https://www.getaround.com/">Getaround</a>. Their service is very comparable to Airbnb where trust is a necessity in their product.</p>
-      <img src="images/getaround.png" class="full_image">
+      <p>It is obvious from the care they take in designing trust into their experience, that Airbnb understands the important of this in their product. Validation of their well executed design exists beyond just Airbnb's popularity. A look as many similar products that have surfaced after Airbnb is a testament to their success. Looking at <a href="https://www.getaround.com/">Getaround</a>, their service is very comparable to Airbnb where trust is a necessity in their product.</p> 
+      <img src="images/getaround.png" class="full_image border">
+      <h5 class="caption">Getaround homepage</h5>
+      <p>Getaround is a car sharing service where users can provide or lease cars for a specific amount of time. While their design take inspiration from Airbnb, they have some strengths and some weaknesses to their product.</p>
       <ul>
-        <li><b>Certification</b></li>
+        <li><b>Certification</b>: Every user of Getaround must provide a legal drivers license which is then cross referenced with the DMV or international equivalent to see a users driving history. Entrusting a stranger to drive your car is difficult, but drivers with any past tickets or accidents are not permitted to lease, making the remaining drivers feel more trustworthy.</li>
         <div class="center">
           <img style="max-width: 500px;" src="images/ga_verification.png" class="full_image">
           <h5 class="caption">Getaround verification process</h5>
         </div>
-        <li><b>Expectations</b>: secret or hidden fees such as a smoking, dirty, wasn't sure how to adress this, common complaint</li>
-        <li><b>Layout</b>: information is extremely unclear.</li>
+        <li><b>Expectations</b>: From personal experience and from user reviews, its seems that Getaround has a major issue with their payment service. Specifically, they have failed to communicate the total cost of rental making users feel as if there are secret or hidden fees. The lack of transparency about these fees make it feel as if they are intentionally being kept from the user and foster a sensation of distrust in the service. In order to rectify the situation, Getaround should provide clear details about any additional fees when a user is renting a car.</li>
+        <li><b>Layout</b>: The layout and navigation of the site is a little confusing when you first enter. Below is a widget on the rental screen. This widget fails to provide some key information about the breakdown of the cost. It is unclear as to whether or not clicking rent will automatically book the car, or just take you to a page that provides more details. The lack of information and confusing layout could deter users from using this service as it feels as if Getaround is not providing sufficient information.</li>
         <div class="center">
           <img style="max-width: 250px;" src="images/ga_book.png" class="full_image">
-          <h5 class="caption">Getaround booking process</h5>
+          <h5 class="caption">Getaround Payment Process</h5>
         </div>
-        <li><b>Brand</b>: One of the perils of a younger company is a lack of effort and resrouces invested in developing a brand. For many companies, this (rightfully so) takes a back seat to the development of a functional product. However, when engagement with your product depends on your brand, its often important to consider both during development. </li>
+        <li><b>Brand</b>: One of the perils of a younger company is a lack of effort and resources dedicated to developing a brand. For many companies, this (rightfully so) takes a back seat to the development of a functional product. However, when engagement with your product depends on a key feature of you brand, its often important to consider both marketing and product during design and development. For Getaround, their brand does not invoke a sense of trust or confidence. There dark palette, lack of people in their imagery, and lack of consistency in their visual design and interaction patterns makes the service feel unpolished. For products that require trust to function, this can seriously reduce conversion and dissuade new users from using the product.</li>
       </ul>
     </div>
   </div>
